%% Service Blueprint ERD
%%
%% REGENERATED FROM THE LIVE SCHEMA on 2026-08-26, not hand-edited. The previous
%% version was generated on 2026-08-20 and was wrong the next morning: the
%% vocabulary refactor's last three migrations landed on 2026-08-21, so this
%% file spent six days asserting `service_lifecycles` and `propositions` at a
%% database that had neither. It was also missing `deleted_structure`
%% altogether, carried a `paths.kind` enum with five values where the
%% database has three, and filed `slices.origin` under the wrong enum.
%%
%% A snapshot regenerated one day before a rename is a snapshot that lies with
%% a generation stamp on it, which is worse than one that admits it is old.
%% docs/reference/schema-snapshot-queries.sql query 4 is now asserted by
%% migration 20260826130000 rather than trusted to a human; the other three
%% still need re-running by hand whenever the schema moves.
%%
%% To refresh: re-run the queries in docs/reference/schema-snapshot-queries.sql
%% against the live database and rewrite this file plus
%% supabase/schema.reference.sql from their output.
%%
%% Enums (CHECK constraints, live 2026-08-26):
%%   scenarios.layout         ∈ (stacked | merged)  what the board opens as;
%%                                                  written by the header toggle
%%   paths.kind               ∈ (happy | variant | exception)
%%   cell_dependencies.kind   ∈ (leads_to | enables)
%%   stakeholders.kind        ∈ (recipient | staff | partner | provider | team)
%%   evidence.kind            ∈ (interview | survey | analytics | doc | meeting |
%%                               decision | observation | other)
%%   audit_findings.severity  ∈ (info | warn | critical)
%%   audit_findings.source    ∈ (audit | whatif | import-sweep)
%%   audit_findings.status    ∈ (open | resolved | dismissed)
%%   slices.kind              ∈ (journey | step | lane | cell | custom)
%%   slices.authorship        ∈ (generated | customized | human)
%%   services.origin          ∈ (import | app)
%%   authoring_changes.deleted_kind ∈ (scenario | path | lane | step | cell)
%%   authoring_changes.author ∈ (human | agent)
%%   agent_messages.kind      ∈ (user | assistant | tool | status)
%%   origin (cells | lanes | paths | phases | scenarios | steps) ∈ (import | app)
%%
%% cells.status and paths.status are the `entity_status` DOMAIN, not a CHECK —
%% one shared six-value list, so the two tables cannot drift apart.
%%
%% Integrity: cells.path_id must match lanes.path_id AND (path_id, step_id) must
%%            exist in path_steps — DB trigger cells_validate_path_match. Import
%%            order: paths → steps → path_steps → lanes → cells → cell_dependencies.
%%            The trigger only ever sees writes to cells, so moving the LANE
%%            used to leave its cells on a path it had left, silently. Since
%%            20260830180000 the pair is also a composite foreign key —
%%            cells (lane_id, path_id) → lanes (id, path_id), referencing
%%            lanes_id_path_unique — which refuses the lane-side move too.
%%
%% Roles: lanes.lane_role is a semantic key kept separate from the display name,
%%        because inferring one from the other broke every non-English blueprint.
%%        Canonical: customer_actions, frontstage_actions, backstage_actions,
%%        partner_actions, frontstage_touchpoints, backstage_touchpoints,
%%        support_actions, storyboard. Constrained by lanes_lane_role_check,
%%        NOT extensible; null = generic swimlane, and permitted on purpose.
%%
%% Soft references: evidence.cell_id, audit_findings.cell_ids and slides.cell_ids
%%        carry NO foreign key, deliberately. The importer's scenario-scoped
%%        delete-and-reinsert must never cascade into the authored rows that a
%%        person authored. The paired *_cell_keys columns are how those rows are
%%        recovered when the uuids they pointed at are replaced.
erDiagram
  services           ||--o{ phases : "has many"
  phases             ||--o{ scenarios : "has many"
  phases             |o--o| phases : "loops_to_phase_id"
  scenarios          ||--o{ paths : "has many"
  scenarios          ||--o{ steps : "has many"
  paths              ||--o{ path_steps : "has many"
  steps              ||--o{ path_steps : "has many"
  paths              ||--o{ lanes : "has many"
  paths              ||--o{ cells : "has many"
  lanes              ||--o{ cells : "has many"
  steps              ||--o{ cells : "has many"
  cells              ||--o{ cell_dependencies : "source"
  cells              ||--o{ cell_dependencies : "target"

  %% Records ABOUT the board rather than squares of it. Shipped 2026-07-29 in
  %% f65efcf. Called the "derived layer" until 2026-08-26 and the "analysis
  %% tier" until 2026-08-31, then neither: no one word was true of all four, so
  %% each has an OWNER instead (CONTEXT.md). Four of the five are authored by a
  %% person, which is what both nouns got wrong.
  services           ||--o{ stakeholders : "the cast"
  stakeholders       |o--o| stakeholders : "part_of_id, teams contain people"
  stakeholders       |o--o{ lanes : "lanes.stakeholder_id, NULLABLE"
  stakeholders       |o--o{ slices : "slices.stakeholder_id"

  services           ||--o{ evidence : "has many"
  services           ||--o{ audit_findings : "has many"
  services           ||--o{ slices : "has many"
  services           ||--|| business_models : "one per service"
  slices             ||--o{ slides : "has many"
  slides             ||--o{ slide_images : "the set it shows, once picked"
  cells              ||--o{ slide_images : "slide_images.cell_id, a cited cell's frame"

  %% Agent session ledger — unrelated to the blueprint tree.
  agent_sessions     ||--o{ agent_messages : "has many"

  services {
    uuid id PK
    text name
    text summary
    text origin "import | app"
  }
  phases {
    uuid id PK
    uuid service_id FK
    uuid loops_to_phase_id FK "optional self-reference"
    text name
    text summary "the stage in one line"
    int position
    text business_impact "what this phase is worth, and what it costs"
    text operational_requirements "what must be true for it to run at all"
    text origin
  }
  scenarios {
    uuid id PK
    uuid phase_id FK
    text name
    text summary "the situation this blueprint covers"
    int position
    text layout "stacked | merged"
    text origin
  }
  paths {
    uuid id PK
    uuid scenario_id FK
    text name
    text kind
    text summary "when this route applies"
    text note "the author's aside, not fact"
    entity_status status
    text origin
  }
  steps {
    uuid id PK
    uuid scenario_id FK
    text name
    text summary "what this moment is, across every lane"
    text origin
  }
  path_steps {
    uuid path_id FK
    uuid step_id FK
    int position
  }
  lanes {
    uuid id PK
    uuid path_id FK
    uuid stakeholder_id FK "null on the structural rows"
    text name
    text lane_role "semantic key, never inferred from the name"
    int position
    text owner_team
    jsonb kpis
    jsonb tools
    text origin
  }
  cells {
    uuid id PK
    uuid path_id FK
    uuid lane_id FK
    uuid step_id FK
    text content "what happens in this moment"
    text summary "the tl;dr the detail fields add up to"
    text function "why this moment exists"
    text form "tone and manner; frontstage only"
    jsonb value_props "who gets what"
    text owner "OVERRIDE of the lane's owner_team; empty means same as the lane"
    text perceived_owner "who the customer believes owns it; frontstage only"
    text picture
    jsonb links "authored URLs — resources, NOT dependencies"
    int position "order within one (lane, step) slot"
    text cell_key "service/scenario/path/lane/step, slugified"
    entity_status status
    tsvector search_tsv "generated"
    text origin
  }
  cell_dependencies {
    uuid id PK
    uuid source_cell_id FK
    uuid target_cell_id FK
    text kind "leads_to = makes it happen, drawn | enables = makes it possible, never drawn"
    text name "the word on the arrow"
    text note "why the edge exists, in the author's own words"
  }
  evidence {
    uuid id PK
    uuid service_id FK
    uuid cell_id "soft, no FK. XOR with proposition_question_key"
    text cell_key "paired with cell_id — both null or both set"
    text proposition_question_key "understand | value | usability"
    text kind
    text title
    text note "a quotation, an observation, or a link — a URL here renders as one"
    date observed_at
    text added_by "agent name or participant code — never the interviewee"
    uuid created_by
  }
  audit_findings {
    uuid id PK
    uuid service_id FK
    uuid run_id
    text source
    text check_key
    text severity
    uuid_array cell_ids "soft, no FK"
    text_array cell_keys "same cardinality as cell_ids, enforced"
    text summary "the finding itself, in one line"
    text fingerprint "dedupe across runs"
    text status "open | resolved | dismissed"
  }
  slices {
    uuid id PK
    uuid service_id FK
    uuid stakeholder_id FK "trigger keeps actor equal to their name"
    text kind
    text title
    text summary
    text actor
    text locale
    int position
    text authorship "generated | customized | human"
    uuid created_by
  }
  slides {
    uuid id PK
    uuid slice_id FK
    int position
    uuid_array cell_ids "soft, no FK"
    text_array cell_keys "same cardinality as cell_ids, enforced"
    text title
    text caption
    bool shows_all_images "true = every cited cell's frame, tracking the board"
    uuid created_by
  }
  slide_images {
    uuid id PK
    uuid slide_id FK "cascades"
    int position "unique per slide"
    uuid cell_id FK "cascades; exactly one of cell_id / image_url"
    text image_url "an upload, joining the set"
  }
  stakeholders {
    uuid id PK
    uuid service_id FK
    uuid part_of_id FK "self-reference: an actor is part of another, one level"
    text name
    text kind "recipient | staff | partner | provider | team"
    text note
    text_array aliases "other spellings seen in this blueprint"
  }
  business_models {
    uuid service_id PK
    text funding
    text pricing
    text delivery_cost
    text revenue_model
    text partners
    uuid created_by
  }
  authoring_changes {
    uuid id PK
    timestamptz at
    text author "human | agent"
    uuid author_id
    uuid agent_session_id "no FK on purpose; the record outlives the session"
    text fn "the authoring RPC, or a direct-table mutation name"
    jsonb args "exactly what was sent — ids, never names"
    jsonb revert "the captured inverse, {fn, args}"
    text deleted_kind "scenario | path | lane | step | cell"
    text label
    jsonb payload "the row as it was, for the identity-keyed inverse"
    jsonb affected_slices
  }
  agent_sessions {
    uuid id PK
    text title
  }
  agent_messages {
    uuid id PK
    uuid session_id FK
    bigint seq
    text kind "user | assistant | tool | status"
    jsonb payload
  }
